# MultiClient-Server

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  mainClient.cpp  streamClient.cpp
Server/: CMakeLists.txt  Server.cpp  Server.h  Streamer.cpp  Streamer.h  mainServer.cpp  streamServer.cpp
